# Wargame_KRUSK

./: .gitignore  README.md  pyproject.toml  requirements-3d.txt  requirements.txt  setup_venv.ps1
DEM_data_1/: geographic_data9_load.py  prokhorovka_geographic_data.npz  prokhorovka_geographic_data_100m.csv  prokhorovka_terrain_250m.csv  prokhorovka_terrain_250m.npz  terrain_summary.txt
godot/: BUILD.md  DESIGN_TOKENS.md  export_presets.cfg  icon.svg.import  project.godot
godot/data/: initial_state.json  lanchester_matrix.json  terrain_payload.json
godot/scripts/: BackendClient.gd  BackendClient.gd.uid  Main.gd  Main.gd.uid
scripts/: analyze_historical_run.py  build_backend_macos.sh  build_backend_windows.ps1  build_godot_macos.sh  build_godot_windows.ps1  build_standalone.ps1  build_standalone.sh  build_standalone_macos.sh  build_standalone_windows.ps1  downsample_terrain_to_csv.py  generate_historical_v1.py  redeploy_prokhorovka_historical.py
src/wargame/: __init__.py  api.py  main.py
src/wargame/config/: default.yaml
src/wargame/core/: battlefield.py  config_loader.py  detection.py  lanchester.py  loader.py  sim_runner.py  terrain.py  types.py  unit.py
src/wargame/render/: panda3d_renderer.py  pygame_renderer.py
src/wargame/scenarios/: prokhorovka_default.json  prokhorovka_historical_test.json  prokhorovka_historical_v1.json
src/wargame/tools/: grid_search.py
tests/: test_api.py  test_detection.py
