[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wargame-krusk"
version = "0.2.0"
description = "Godot 4 client plus Python localhost backend for the Battle of Prokhorovka/Kursk"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.2",
  "numpy>=2.0.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.6"]

[project.scripts]
wargame-krusk = "wargame.main:main"
wargame-krusk-grid-search = "wargame.tools.grid_search:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wargame = ["config/*.yaml", "scenarios/*.json", "data/**/*.csv", "data/**/*.json", "data/**/*.yaml"]
